2.3.0   - Fixed a bug where the D-Shell process would die if the SSH connection suddenly closed after previously 
          being open during the initial connection phase, including during a controlled reboot.
2.2.1   - Fixed an issue with the IP allocation system reporting the wrong block when full.
        - Removed taint requirement from locally executed only scripts.
        - Fixed missing formatting for variables in Command Sets.
        - Added minor username tag for snapshot tracking.
        - Fixed a bug related to correctly capturing hashes where the key or value ended in '='.
        - Fixed some block size display issues for /32 blocks. (now correctly uses parent block for some values).
        - Fixed an issue passing multi-line variables when using a Windows based browser.
        - Added some logic to determine if a system is a VM before performing a snapshot operation.
        - Fixed some missing audit colours and standardised CSS colour names.
        - Fixed a bug where commands with HTML in them would display as HTML instead of raw commands.
        - Fixed an issue where temporary files were not cleaned up if hosts did not recover from a controlled reboot.
        - Adjusted the Command Set Git push mechanism to substitute the *SUDO tag with a useful shell command.
        - Fixed a greedy glob in the Command Set Dump process that was stripping spaces in some circumstances.
        - Added a missing view mode for Redirects.
        - Fixed some persistent filters for better usability when dealing with large numbers of redirects / reverse proxy entries.
        - Modified some logic to find server names within aliases when bundling redirects together.
2.2.0   - Added handler for incorrect use of *WAITFOR and *SEND together in the same command.
        - Added the ability to pause a Job indefinitely from within a Command Set.
        - Changed the licence from GPLv3 to AGPLv3.