@@ -1,5 +1,6 @@
 2.3.0   - Fixed a bug where the D-Shell process would die if the SSH connection suddenly closed after previously 
           being open during the initial connection phase, including during a controlled reboot.
+        - Fixed an issue where a random SSH termination wasn't correctly handled by the CDSF distribution process.
 2.2.1   - Fixed an issue with the IP allocation system reporting the wrong block when full.
         - Removed taint requirement from locally executed only scripts.
         - Fixed missing formatting for variables in Command Sets.
